# cafe-uruguay

./: Dockerfile  README.md  build_img.sh  pyproject.toml  run_container.sh
cafe_uruguay/: config.py  main.py
